module(
    name = "torch_tensorrt",
    version = "2.14.0a0",
    repo_name = "org_pytorch_tensorrt",
)

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
git_override(
    module_name = "rules_pkg",
    commit = "17c57f4",
    remote = "https://github.com/narendasan/rules_pkg",
)

# Developer tooling: clangd-compatible compile_commands.json extractor.
# `dev_dependency = True` keeps this out of the dep graph for any project that
# consumes torch_tensorrt as a Bazel module. Refresh with:
#     bazel run //:refresh_compile_commands
# See CONTRIBUTING.md ("Editor / clangd setup") for details.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

local_torch = use_repo_rule("//toolchains:local_torch.bzl", "local_torch")

# Pinned to ExecuTorch main for PyTorch 2.14 native ABI compatibility.
new_git_repository(
    name = "executorch",
    build_file = "@//third_party/executorch:BUILD",
    # PyTorch 2.14-compatible ExecuTorch main commit
    commit = "a6d812a082df57898b8608f56c867140cc9da32c",
    patch_cmds = [
        "find . -mindepth 2 \\( -name BUILD -o -name BUILD.bazel \\) -delete",
        "mkdir executorch && find . -mindepth 1 -maxdepth 1 ! -name executorch ! -name BUILD ! -name BUILD.bazel ! -name REPO.bazel -exec cp -a {} executorch/ \\;",
    ],
    patch_cmds_win = [
        "Get-ChildItem -Recurse -Include BUILD,BUILD.bazel | Where-Object { $_.DirectoryName -ne (Get-Location).Path } | Remove-Item -Force",
        "New-Item -ItemType Directory executorch | Out-Null; Get-ChildItem -Force | Where-Object { $_.Name -notin @('executorch','BUILD','BUILD.bazel','REPO.bazel') } | Copy-Item -Destination executorch -Recurse -Force",
    ],
    recursive_init_submodules = True,
    remote = "https://github.com/pytorch/executorch.git",
)

torch_nccl_detect = use_repo_rule("//toolchains/torch_nccl:defs.bzl", "torch_nccl_detect")

torch_nccl_detect(name = "torch_nccl")

# External dependency for torch_tensorrt if you already have precompiled binaries.
new_local_repository(
    name = "torch_tensorrt",
    build_file = "@//third_party/torch_tensorrt:BUILD",
    path = "/usr/local/lib/python3.12/site-packages/torch_tensorrt/",
)

# CUDA should be installed on the system locally
# for linux x86_64 and aarch64
new_local_repository(
    name = "cuda",
    build_file = "@//third_party/cuda:BUILD",
    path = "/usr/local/cuda-13.2/",
)

# for Jetson
# These versions can be selected using the flag `--//toolchains/dep_collection:compute_libs="jetpack"`
new_local_repository(
    name = "cuda_l4t",
    build_file = "@//third_party/cuda:BUILD",
    path = "/usr/local/cuda-12.6",
)

# for windows
new_local_repository(
    name = "cuda_win",
    build_file = "@//third_party/cuda:BUILD",
    path = "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v13.2/",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

####################################################################################
# Locally installed dependencies (use in cases of custom dependencies or aarch64)
####################################################################################

# Detect the locally installed PyTorch at build time so the headers always match
# the runtime libtorch_cuda.so, avoiding ABI mismatches (e.g. CUDAGraph layout).
# Works with uv (.venv/), virtualenv (VIRTUAL_ENV), and conda (CONDA_PREFIX).
# Override with TORCH_PATH env var if auto-detection fails.
local_torch(name = "libtorch")

# NOTE: If you are using a local archive build of torch, just point the Libtorch dep to that path.

#new_local_repository(
#    name = "libtorch",
# please modify this path according to your local python wheel path
#    path = "/usr/local/lib/python3.11/dist-packages/torch",
#    build_file = "third_party/libtorch/BUILD"
#)

# Explicit ExecuTorch override. The repository rule above is preferred.
# If you use this manually, point the path either at the installed
# ExecuTorch package root or a compatible source-tree root.
#new_local_repository(
#    name = "executorch",
#    build_file = "@//third_party/executorch:BUILD",
#    path = "/path/to/executorch",
#)

#new_local_repository(
#   name = "tensorrt",
#   path = "/usr/",
#   build_file = "@//third_party/tensorrt/local:BUILD"
#)

#############################################################################################################
# Tarballs and fetched dependencies (default - use in cases when building from precompiled bin and tarballs)
#############################################################################################################

# Alternatively, pin to a specific nightly for reproducible/frozen builds.
# Uncomment this block and comment out local_torch above.
# NOTE: The pinned version must match the PyTorch installed in your Python
# environment — a mismatch causes ABI breakage (see installation docs).
#http_archive(
#    name = "libtorch",
#    build_file = "@//third_party/libtorch:BUILD",
#    strip_prefix = "libtorch",
#    urls = ["https://download.pytorch.org/libtorch/nightly/cu130/libtorch-shared-with-deps-latest.zip"],
#)

# in aarch64 platform you can get libtorch via either local or wheel file
# It is possible to specify a wheel file to use as the libtorch source by providing the URL below and
# using the build flag `--//toolchains/dep_src:torch="whl"`
#http_archive(
#    name = "torch_whl",
#    build_file = "@//third_party/libtorch:BUILD",
#    strip_prefix = "torch",
#    type = "zip",
#    urls = ["https://download.pytorch.org/whl/nightly/cu128/torch-2.8.0.dev20250415%2Bcu128-cp310-cp310-manylinux_2_28_aarch64.whl"],
#)

http_archive(
    name = "libtorch_win",
    build_file = "@//third_party/libtorch:BUILD",
    strip_prefix = "libtorch",
    urls = ["https://download.pytorch.org/libtorch/nightly/cu130/libtorch-win-shared-with-deps-latest.zip"],
)

http_archive(
    name = "torch_l4t",
    build_file = "@//third_party/libtorch:BUILD",
    strip_prefix = "torch",
    type = "zip",
    urls = ["https://pypi.jetson-ai-lab.io/jp6/cu126/+f/62a/1beee9f2f1470/torch-2.8.0-cp310-cp310-linux_aarch64.whl"],
)

# Download these tarballs manually from the NVIDIA website
# Either place them in the distdir directory in third_party and use the --distdir flag
# or modify the urls to "file:///<PATH TO ARCHIVE>/<ARCHIVE NAME>"

http_archive(
    name = "tensorrt",
    build_file = "@//third_party/tensorrt/archive:BUILD",
    strip_prefix = "TensorRT-11.0.0.114",
    type = "tar.zst",
    urls = [
        "https://developer.nvidia.com/downloads/compute/machine-learning/tensorrt/11.0.0/tars/TensorRT-Enterprise-11.0.0.114-Linux-x86_64-cuda-13.2-Release-external.tar.zst",
    ],
)

http_archive(
    name = "tensorrt_rtx",
    build_file = "@//third_party/tensorrt_rtx/archive:BUILD",
    strip_prefix = "TensorRT-RTX-1.5.0.114",
    type = "tar.zst",
    urls = [
        "https://developer.nvidia.com/downloads/trt/rtx_sdk/secure/1.5/TensorRT-RTX-1.5.0.114-Linux-x86_64-cuda-13.2-Release-external.tar.zst",
    ],
)

http_archive(
    name = "tensorrt_sbsa",
    build_file = "@//third_party/tensorrt/archive:BUILD",
    strip_prefix = "TensorRT-11.0.0.114",
    type = "tar.zst",
    urls = [
        "https://developer.nvidia.com/downloads/compute/machine-learning/tensorrt/11.0.0/tars/TensorRT-Enterprise-11.0.0.114-Linux-aarch64-cuda-13.2-Release-external.tar.zst",
    ],
)

http_archive(
    name = "tensorrt_l4t",
    build_file = "@//third_party/tensorrt/archive:BUILD",
    strip_prefix = "TensorRT-10.3.0.26",
    urls = [
        "https://developer.nvidia.com/downloads/compute/machine-learning/tensorrt/10.3.0/tars/TensorRT-10.3.0.26.l4t.aarch64-gnu.cuda-12.6.tar.gz",
    ],
)

http_archive(
    name = "tensorrt_win",
    build_file = "@//third_party/tensorrt/archive:BUILD",
    strip_prefix = "TensorRT-11.0.0.114",
    urls = [
        "https://developer.nvidia.com/downloads/compute/machine-learning/tensorrt/11.0.0/zip/TensorRT-Enterprise-11.0.0.114-Windows-amd64-cuda-13.2-Release-external.zip",
    ],
)

http_archive(
    name = "tensorrt_rtx_win",
    build_file = "@//third_party/tensorrt_rtx/archive:BUILD",
    strip_prefix = "TensorRT-RTX-1.5.0.114",
    urls = [
        "https://developer.nvidia.com/downloads/trt/rtx_sdk/secure/1.5/TensorRT-RTX-1.5.0.114-Windows-amd64-cuda-13.2-Release-external.zip",
    ],
)
